--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,28 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 14px;
+  font-size: 14;
   line-height: 1.5;
+  text-align: center;
+  margin-top: 50px;
+
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
+
+body p{
+  letter-spacing: 1px;
+  margin-left: 80px;
+  text-align: left;
+}
+
+body h1{
+  margin-bottom: 60px;
+}
+
+body img{
+  margin-top: 50px;
+}
+
